Ignored some more warnings that crop up in builds on JDK 16.