@@ -750,7 +750,12 @@ task wpiManyTests(group: "Verification") {
                         line.startsWith("Running ")
                         // Warnings about bad path elements aren't related to WPI and are ignored.
                         || line.startsWith("warning: [path]")
-                        // Ignore the summary line that reports the total number of warnings.
+                        // Ignore bootstrap classpath warning:
+                        || line.startsWith("warning: [options] bootstrap")
+                        // Ignore warnings about illegal access:
+                        || line.contains("Option --illegal-access is deprecated")
+                        // Ignore the summary line that reports the total number of warnings (which can be single or plural).
+                        || line.endsWith("warning")
                         || line.endsWith("warnings")) {
                   return;
                 }
